--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
     justify-content: space-between;
     align-items: center;
     height: auto;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 main img{
     width: 250px;
